[gd_scene load_steps=2 format=2]

[ext_resource path="res://world/Crop.gd" type="Script" id=1]

[node name="Crop" type="Node2D"]
script = ExtResource( 1 )

[node name="YoungSprite" type="Sprite" parent="."]
visible = false
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="AdultSprite" type="Sprite" parent="."]
visible = false
centered = false
region_enabled = true
region_rect = Rect2( 16, 0, 16, 16 )

[node name="DyingSprite" type="Sprite" parent="."]
visible = false
centered = false
region_enabled = true
region_rect = Rect2( 0, 16, 16, 16 )

[node name="LifeTimer" type="Timer" parent="."]
autostart = true

[node name="WaterTimer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="timeout" from="WaterTimer" to="." method="_on_WaterTimer_timeout"]
